[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/stage3.gd" type="Script" id=1]
[ext_resource path="res://asset/stage3/bg.png" type="Texture" id=2]
[ext_resource path="res://animations/Johnny.tres" type="SpriteFrames" id=3]
[ext_resource path="res://animations/Miguel_swim.tres" type="SpriteFrames" id=4]
[ext_resource path="res://gui_dialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui_step_info.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui_player.tscn" type="PackedScene" id=7]
[ext_resource path="res://animations/splash.tres" type="SpriteFrames" id=8]
[ext_resource path="res://asset/stage3/pool_water.png" type="Texture" id=9]
[ext_resource path="res://sound/stage3.ogg" type="AudioStream" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 102.196, 170.5, 0, 0, 0, 0, 111.972, 162.12, 0, 0, 0, 0, 123.146, 160.723, 0, 0, 0, 0, 136.414, 162.12, 0, 0, 0, 0, 164.451, 172.825 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 162.133, 171.636, 0, 0, 0, 0, 175.937, 202.381, 0, 0, 0, 0, 176.489, 179.929 )
}

[node name="stage3" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 256, 128 )
current = true

[node name="bg" type="Sprite" parent="."]
position = Vector2( 0, 0.698334 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="init_pos" type="Position2D" parent="."]
position = Vector2( 178, 120 )

[node name="show_pos" type="Position2D" parent="."]
position = Vector2( 163, 119 )

[node name="johnny_final_pos" type="Position2D" parent="."]
position = Vector2( 76, 164 )

[node name="miguel_final_pos" type="Position2D" parent="."]
position = Vector2( 98, 166 )

[node name="johnny" type="AnimatedSprite" parent="."]
position = Vector2( 188.551, 112.432 )
frames = ExtResource( 3 )
animation = "walk"
frame = 3
playing = true
flip_h = true

[node name="Tween_show" type="Tween" parent="."]

[node name="Tween_walk" type="Tween" parent="."]

[node name="miguel_a" type="AnimatedSprite" parent="."]
position = Vector2( 188.534, 121.924 )
frames = ExtResource( 4 )
animation = "stand"
flip_h = true

[node name="cl" parent="." instance=ExtResource( 5 )]

[node name="step_info" parent="cl" instance=ExtResource( 6 )]
margin_left = 262.0
margin_top = 105.0
margin_right = 341.0
margin_bottom = 132.0

[node name="player" parent="cl" instance=ExtResource( 7 )]

[node name="Position2D" type="Position2D" parent="."]

[node name="path" type="Path2D" parent="."]
position = Vector2( -2, -3 )
curve = SubResource( 1 )

[node name="f" type="PathFollow2D" parent="path"]
position = Vector2( 102.196, 170.5 )
rotate = false
loop = false

[node name="s" type="Sprite" parent="path/f"]

[node name="splash" type="AnimatedSprite" parent="path/f"]
position = Vector2( 4, 0 )
scale = Vector2( 2, 2 )
frames = ExtResource( 8 )

[node name="Tween" type="Tween" parent="path/f"]

[node name="water_surface" type="Position2D" parent="."]
position = Vector2( 176.705, 189.684 )

[node name="path2" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="f" type="PathFollow2D" parent="path2"]
position = Vector2( 162.133, 171.636 )
rotation = 1.41504
rotate = false
loop = false

[node name="s" type="Sprite" parent="path2/f"]

[node name="Tween" type="Tween" parent="path2/f"]

[node name="pool_water" type="Sprite" parent="."]
position = Vector2( 320.248, 202.349 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="timer_final_time" type="Timer" parent="."]
wait_time = 1.2

[node name="efx" type="AudioStreamPlayer" parent="."]

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="tween_all_completed" from="Tween_show" to="." method="_on_Tween_show_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween_walk" to="." method="_on_Tween_walk_tween_all_completed"]
[connection signal="animation_finished" from="path/f/splash" to="." method="_on_splash_animation_finished"]
[connection signal="tween_all_completed" from="path/f/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="path2/f/Tween" to="." method="_on_Tween_tweenp2_all_completed"]
[connection signal="timeout" from="timer_final_time" to="." method="_on_timer_final_time_timeout"]
